--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1> 適当につくったBatファイル</h1>
 <h1>Batとか書いてるから当然winodws用です()</h1>
-<a href="download/Main.bat" download>Batファイルをダウンロードする</a>
+<a href="download/Main.bat">Batファイルをダウンロードする</a>
