--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <h1> 適当につくったBatファイル</h1>
 <h1>Batとか書いてるから当然winodws用です()</h1>
 <a href="main/Main.bat" download>Batファイルをダウンロードする</a>
+<h1>使い方</h1>
+<h2>Batファイルを、ダウンロードして、開きます。</h2>
+<h2>なにか適当なキーを押します</h2>
+<h2>色が変わります</h2>
+<h3>え？それだけだって...?そうだよ？</h3>
