--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1> 適当につくったBatファイル</h1>
 <h1>Batとか書いてるから当然winodws用です()</h1>
-<a href="main/Main.bat" download>Batファイルをダウンロードする</a>
+<a href="Download/Main.bat" download>Batファイルをダウンロードする</a>
 
 <h1>使い方</h1>
 <h2>Batファイルを、ダウンロードして、開きます。</h2>
