--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<link rel="icon" href="/favicon.ico" id="favicon">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
+<link rel="icon" href="icon/favicon.ico" id="favicon">
+<link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon-180x180.png">
 <h1> 適当につくったBatファイル</h1>
 <h1>Batとか書いてるから当然winodws用です()</h1>
 <a href="Download/Main.bat" download>Batファイルをダウンロードする</a>
