--- a/index.html
+++ b/index.html
@@ -15,3 +15,10 @@
 <h2>Batを開くだけ！</h2>
 <h3>Batの中身見たらわかる通り、実行中のプロセスを連続で表示しているだけです</h3>
 <h3>止めたいときは、そのまま閉じてください</h3>
+<h1>3つめ</h1>
+<a href="Download/無限出力.bat" download>Batファイルをダウンロードする</a>
+
+<h2>使い方</h2>
+<h2>最初に、出力したい文字を入力する</h2>
+<h2>enterを押す</h2>
+<h2>止めたいときは、先程のbatと同様、✕マークでそのまま閉じる</h2>
