--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<html>
+  <head>
+
+    <link rel="stylesheet" href="main.css" type="text/css">
+
+  </head>
+  <body>
+
+  </body>
+</html>
 <title>uirusunikiのゴミbat部屋</title>
 <link rel="icon" href="icon/favicon.ico" id="favicon">
 <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon-180x180.png">
