--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1>Batとか書いてるから当然winodws用です()</h1>
 <a href="Download/Main.bat" download>Batファイルをダウンロードする</a>
 
-<h1>使い方</h1>
+<h1 class=use>使い方</h1>
 <h2>Batファイルを、ダウンロードして、開きます。</h2>
 <h2>なにか適当なキーを押します</h2>
 <h2>色が変わります</h2>
