--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <h1>Batとか書いてるから当然winodws用です()</h1>
 <a href="Download/Main.bat" download>Batファイルをダウンロードする</a>
 
-<h1 class=use>使い方</h1>
+<h1 class="use">使い方</h1>
 <h2>Batファイルを、ダウンロードして、開きます。</h2>
 <h2>なにか適当なキーを押します</h2>
 <h2>色が変わります</h2>
 <h3>え？それだけだって...?そうだよ？</h3>
 <h1>2つめ</h1>
 <a href="Download/ちょっと怖い.bat" download>Batファイルをダウンロードする</a>
-<h1>使い方</h1>
+<h1 class="use">使い方</h1>
 <h2>Batを開くだけ！</h2>
 <h3>Batの中身見たらわかる通り、実行中のプロセスを連続で表示しているだけです</h3>
 <h3>止めたいときは、そのまま閉じてください</h3>
