--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </body>
 </html>
 <title>uirusunikiのゴミbat部屋</title>
+<body bgcolor="#F7823F">
 <link rel="icon" href="icon/favicon.ico" id="favicon">
 <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon-180x180.png">
 <h1> 適当につくったBatファイル</h1>
@@ -33,3 +34,4 @@
 <h2>最初に、出力したい文字を入力する</h2>
 <h2>enterを押す</h2>
 <h2>止めたいときは、先程のbatと同様、✕マークでそのまま閉じる</h2>
+</body>
