--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </body>
 </html>
 <title>uirusunikiのゴミbat部屋</title>
-<body bgcolor="#F7823F">
+<body bgcolor="#000000">
 <link rel="icon" href="icon/favicon.ico" id="favicon">
 <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon-180x180.png">
 <h1> 適当につくったBatファイル</h1>
