--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   </body>
 </html>
 <title>uirusunikiのゴミbat部屋</title>
-<body bgcolor="#000000">
+<body bgcolor="#000000" text="#ffffff">
 <link rel="icon" href="icon/favicon.ico" id="favicon">
 <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon-180x180.png">
 <h1> 適当につくったBatファイル</h1>
 <h1>Batとか書いてるから当然winodws用です()</h1>
 <a href="Download/Main.bat" download>Batファイルをダウンロードする</a>
+
 
 <h1 class="use">使い方</h1>
 <h2>Batファイルを、ダウンロードして、開きます。</h2>
