--- a/tmt.html
+++ b/tmt.html
@@ -1,1 +1,11 @@
-<h1 class="tmt">DMでトマトって言ってみ?</h1>
+<html>
+  <head>
+
+    <link rel="stylesheet" href="main.css" type="text/css">
+
+  </head>
+  <body>
+ <div> 
+<h1 class="tmt"> DMでトマトって言ってみ? </h1>
+ </div> 
+  </body>
