--- a/tmt.html
+++ b/tmt.html
@@ -1,7 +1,7 @@
 <html>
   <head>
 
-    <link rel="stylesheet" href="main.css" type="text/css">
+    <link rel="stylesheet" href="/css.css" type="text/css">
 
   </head>
   <body>
