--- a/tmt.html
+++ b/tmt.html
@@ -1,11 +1,13 @@
 <html>
-  <head>
+ <head>
 
     <link rel="stylesheet" href="/css.css" type="text/css">
 
   </head>
   <body>
  <div> 
+   <dev bgcolor="#000000" text="#ffffff">
 <h1 class="tmt"> DMでトマトって言ってみ? </h1>
  </div> 
   </body>
+</dev>
