--- a/tmt.html
+++ b/tmt.html
@@ -6,8 +6,8 @@
   </head>
   <body>
  <div> 
-   <dev bgcolor="#000000" text="#ffffff">
+   <body bgcolor="#000000" text="#ffffff">
 <h1 class="tmt"> DMでトマトって言ってみ? </h1>
  </div> 
   </body>
-</dev>
+</body>
