--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 <h3>Batの中身見たらわかる通り、実行中のプロセスを連続で表示しているだけです</h3>
 <h3>止めたいときは、そのまま閉じてください</h3>
 <h1>3つめ</h1>
-<a href="Download/無限出力.bat" download>Batファイルをダウンロードする</a>
+<a href="Download/友達からパソコンめっちゃできると思われるかもしれないけど代わりに友達を失ってしまう可能性がある.bat" download>Batファイルをダウンロードする</a>
 
 <h2>使い方</h2>
-<h2>最初に、出力したい文字を入力する</h2>
-<h2>enterを押す</h2>
+<h2>最初に、パスワードを入力する。パスワードは、passwordに設定されてるよ</h2>
+<h2>enterを押す。ちなみに、パスワードが間違えていると、The password is incorrect.が連続出力されるよ^^</h2>
 <h2>止めたいときは、先程のbatと同様、✕マークでそのまま閉じる</h2>
 </body>
 </body>
